# Derive-Agent-Tools

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
derive-agent-tools/: Cargo.toml  README.md
derive-agent-tools-macros/: Cargo.toml  README.md
derive-agent-tools-macros/src/: lib.rs
derive-agent-tools/src/: lib.rs
derive-agent-tools/tests/: document.rs  multiple.rs
derive_agent_tools/: Cargo.toml  README.md
derive_agent_tools/src/: lib.rs
derive_agent_tools/tests/: tool_schema.rs
derive_agent_tools_internals/: Cargo.toml  README.md
derive_agent_tools_internals/src/: lib.rs
