[package]
name = "derive-agent-tools-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macro derives for derive-agent-tools"
license = "MIT"
repository = "https://github.com/ron-leizrowice/derive-agent-tools"
readme = "README.md"
documentation = "https://docs.rs/derive-agent-tools"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
