[package]
name = "derive_agent_tools_internals"
version = "0.1.0"
edition = "2024"
description = "Internal implementation crate for derive_agent_tools"
license = "MIT"
repository = "https://github.com/ron-leizrowice/derive-agent-tools"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
